# search-engine-c

./: CMakeLists.txt
data/docs/: Go Programming Language.txt  Google.txt  Rust Programming Language.txt
include/: httplib.h  inverted_index.h  searcher.h  tokenizer.h
src/: inverted_index.cpp  main.cpp  searcher.cpp  tokenizer.cpp
